--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "babel-runtime": "^6.0.0",
     "vue": "^2.3.3",
+    "vue-resource": "^1.5.0",
     "vue-router": "^2.5.3",
     "vuex": "^2.3.1",
     "fastclick": "^1.0.6",
